# web-framework-sandbox

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  compose.yaml  package.json  vite.config.js
dev-server/: Cargo.toml
dev-server/src/: main.rs
docker/app/: Dockerfile
docker/nginx/: Dockerfile  app.conf
docker/nginx/templates/: default.conf.template
docker/node/: Dockerfile
framework/: Cargo.toml
framework/src/: app.rs  error.rs  helper.rs  lib.rs
framework/src/action/: action.rs  helper.rs  mod.rs  response.rs
framework/src/routing/: action.rs  mod.rs  route.rs  router.rs  tokenizer.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  m20220101_000001_create_user_table.rs
resource/js/: main.js
resource/scss/: _bootstrap.scss  main.scss
resource/template/: landing.html  welcome.html
resource/template/errors/: default.html
resource/template/layout/: error.html  main.html
resources/templates/: example.html
src/: app.rs  error.rs  helper.rs  main.rs  router.rs  routes.rs
src/action/: mod.rs  pages.rs
src/entity/: mod.rs  prelude.rs  user.rs
src/routing/: mod.rs  route.rs  router.rs  tokenizer.rs
