[package]
name = "bus_pattern_framework"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
async-trait = "0.1.89"
serde_json = "1.0.150"
minijinja = "2.21.0"
serde = { version = "1.0.228", features = ["derive"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "entity-registry"] }
migration = { path = "migration" }
dotenvy = "0.15.7"
log = "0.4.33"
regex = "1.13.0"
futures = "0.3.32"

[workspace]
members = [".", "migration"]
