[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.89"
minijinja = "2.21.0"
serde = { version = "1.0.228", features = ["derive"] }
sea-orm = {
    version = "2.0.0-rc",
    features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "entity-registry", "schema-sync"]
}
dotenvy = "0.15.7"
sturdy = "0.1.0"

[workspace]
resolver = "3"
members = [".", "migration"]
